# gpustack

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.corex  Dockerfile.cpu  Dockerfile.dcu  Dockerfile.dcu.base  Dockerfile.musa  Dockerfile.npu  Dockerfile.rocm  Dockerfile.rocm.base  LICENSE  MULTI_SERVER_README.md  Makefile  PROJECT_SUMMARY.md  README.md  README_CN.md  README_JP.md  alembic.ini  conftest.py  docker-compose.yaml  gpustack.bat  gpustack.pth  install.ps1  install.ps1.sha256sum  install.sh  install.sh.sha256sum  mkdocs.yml  pyproject.toml  pytest.ini  test.bat  test_alembic.py  test_multi_server.py
.github/ISSUE_TEMPLATE/: 1_bug_report.md  1_bug_report.yml  2_enhancement.md  2_enhancement.yml  3_question.md  3_question.yml  4_doc.md  4_doc.yml  5_other.md  5_other.yml  部署Bug
.github/workflows/: backport.yml  ci.yml  docker-ci.yaml  docs-translation.yml  install-script-macos.yml  install-script-ubuntu.yml  install-script-windows.yml  install-script.yml  issue-translator.yml  pack.yaml  pr.yml  test-install-script-windows.yml  test-service.yml  translate.yml  vllm-base.yaml
benchmarks/: benchmark_llm.py  benchmark_lora_compare.py  benchmark_serving.py  requirements.txt
charts/gpustack/: Chart.yaml  README.md  values.yaml
charts/gpustack-chart/: Chart.yaml  README.md  values.yaml
charts/gpustack-higress-plugins/: Chart.yaml  values.yaml
docker-compose/: docker-compose.external-observability.yaml  docker-compose.observability.yaml  docker-compose.server.ascend.yaml  docker-compose.server.nvidia.yaml  docker-compose.server.yaml  docker-compose.worker.ascend.yaml  docker-compose.worker.nvidia.yaml  docker-compose.worker.yaml  docker-compose.yaml
docker-compose/prometheus/: prometheus.yml
docs/: CNAME  api-reference.md  architecture.md  code-of-conduct.md  development.md  environment-variables.md  faq.md  index.md  migration.md  multi_server_deployment.md  overview.md  quickstart.md  scheduler.md  troubleshooting.md  upgrade.md
docs/architecture/: components.md
docs/cli-reference/: chat.md  copy-images.md  download-tools.md  draw.md  list-images.md  load-images.md  reload-config.md  save-images.md  start.md
docs/en/: api-reference.md  architecture.md  contributing.md  development.md  faq.md  index.md  migration.md  overview.md  quickstart.md  troubleshooting.md  upgrade.md
docs/image-selector/: index.html
docs/includes/: abbreviations.md
docs/installation/: air-gapped-installation.md  air-gapped.md  apple-metal-installation.md  configuration-options.md  desktop-installer.md  docker-compose.md  docker-installation.md  helm.md  installation-requirements.md  installation-script.md  installation.md  manual-installation.md  requirements.md  uninstallation.md
docs/integrations/: inference-apis.md  integrade-with-newapi.md  integrate-with-cherrystudio.md  integrate-with-claude-code.md  integrate-with-dify.md  integrate-with-litellm.md  integrate-with-maxkb.md  integrate-with-n8n.md  integrate-with-newapi.md  integrate-with-openclaw.md  integrate-with-ragflow.md  interate-with-dify.md  interate-with-ragflow.md  openai-compatible-apis.md
docs/javascripts/: tablesort.js
docs/performance-lab/: overview.md
docs/stylesheets/: extra.css
docs/tutorials/: adding-gpucluster-using-digitalocean.md  adding-gpucluster-using-kubernetes.md  cpu-inference.md  creating-text-embeddings.md  custom-inference-backend.md  distributed-inference.md  editing-images.md  inference-on-cpus.md  inference-with-function-calling.md  inference-with-tool-calling.md  integration-with-others.md  managing-model-routes.md  multiple-node-cluster.md  performing-distributed-inference-across-workers-llama-box.md  performing-distributed-inference-across-workers.md  recommended-parameters-for-image-generation-models.md  running-deepseek-r1-671b-with-distributed-ascend-mindie.md  running-deepseek-r1-671b-with-distributed-vllm.md  running-distributed-inference-across-workers.md  running-distributed-vllm-with-multiprocessing.md  running-inference-with-amd-gpus.md  running-inference-with-ascend-device.md  running-inference-with-ascend-npus.md  running-inference-with-hygon-dcus.md  running-inference-with-moorethreads-gpus.md  running-on-copilot-plus-pcs-with-snapdragon-x.md  running-vision-language-models.md  serving-with-lora-adapters.md  setting-up-a-multi-node-gpustack-cluster.md  using-audio-models.md  using-custom-backends.md  using-deepseek-r1.md  using-image-generation-models.md  using-reranker-models.md  using-vision-language-models.md  vision-model.md
docs/upgrade/: cluster.md  docker.md  helm.md
docs/usage/: installation.md  overview.md
docs/user-guide/: api-key-management.md  auth.md  benchmarking.md  built-in-inference-backends.md  cloud-credential-management.md  cluster-management.md  compatibility-check.md  desktop-setup.md  gpuservice-instance-templates.md  gpuservice-instance-types.md  gpuservice-instances.md  gpuservice-ssh-public-keys.md  gpuservice-storage-types.md  gpuservice-storage.md  image-generation-apis.md  inference-backend-management.md  inference-backends.md  installation.md  model-catalog.md  model-deployment-management.md  model-file-management.md  model-management.md  model-provider-management.md  model-route-management.md  my-models.md  observability.md  openai-compatible-apis.md  pinned-backend-versions.md  playground.md  rerank-api.md  sso.md  usage.md  (+2 more)
gpustack/: __init__.py  _sitecustomize.py  extension.py  logging.py  main.py  security.py  ssl_context.py  utils.py
hack/: build-docker.sh  build-docs.sh  build.sh  check-vllm-version.sh  ci.sh  deps.sh  generate-migration-revision.sh  generate.sh  install.sh  lint.sh  package.sh  publish-pypi.sh  serve-docs.sh  test.sh  translate.py  validate.sh
pack/: Dockerfile  Dockerfile.corex  Dockerfile.corex.amd64  Dockerfile.corex.arm64  Dockerfile.cpu  Dockerfile.dcu  Dockerfile.maca  Dockerfile.mars  Dockerfile.musa  Dockerfile.npu  Dockerfile.rocm  Dockerfile.rocm.base  entrypoint.sh
tests/: conftest.py  test_utils.py
(+1355 files in other folders)
