[tool.poetry]
name = "gpustack"
version = "0.0.0"
description = "GPUStack"
authors = ["GPUStack Authors <contact@gpustack.ai>"]
readme = "README.md"
include = ["*/third_party/**/*","*/ui/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
sqlmodel = "^0.0.18"
pydantic-settings = "^2.2.1"
setproctitle = "^1.3.3"
inflection = "^0.5.1"
openai = "^1.31.1"


prometheus-client = "^0.20.0"
colorama = "^0.4.6"
psutil = "^5.9.8"
requests = "^2.32.3"
huggingface-hub = "^0.23.3"
attrs = "^23.2.0"
aiosqlite = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
pyjwt = "^2.8.0"
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.9"
dataclasses-json = "^0.6.7"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"
httpx = {extras = ["socks"], version = "^0.27.0"}
alembic = "^1.13.2"
shellcheck-py = "^0.10.0.1"
importlib-resources = "^6.4.0"
pytest-asyncio = "^0.23.7"
truststore = "^0.9.1"
cryptography = "^43.0.0"
tzdata = "^2024.1"
modelscope = "^1.18.0"
vllm = {version = "^0.6.1", optional = true}
torch = {version = "^2.4.0", optional = true}
uvicorn = "^0.30.6"
transformers = "^4.44.2"
fastapi-cdn-host = "^0.8.0"
[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.5.1"}
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
black = "^24.4.2"
pytest = "^8.2.0"
openapi-python-client = "^0.20.0"

deptry = "^0.16.1"
pre-commit = "^3.7.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
twine = "^5.1.1"
mike = "^2.1.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true
force-exclude = '''
/(
    .*/migrations/.*
)/
'''

[tool.poetry.extras]
vllm = ["vllm","torch"]

[tool.poetry.scripts]
gpustack = "gpustack.main:main"
